; ModuleID = '/home/carl/AnghaBench/memcached/extr_slab_automove.c_window_sum.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_slab_automove.c_window_sum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_data = type { i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.window_data*, %struct.window_data*, i32)* @window_sum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @window_sum(%struct.window_data* %0, %struct.window_data* %1, i32 %2) #0 {
  %4 = alloca %struct.window_data*, align 8
  %5 = alloca %struct.window_data*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.window_data*, align 8
  store %struct.window_data* %0, %struct.window_data** %4, align 8
  store %struct.window_data* %1, %struct.window_data** %5, align 8
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  br label %9

9:                                                ; preds = %39, %3
  %10 = load i32, i32* %7, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp slt i32 %10, %11
  br i1 %12, label %13, label %42

13:                                               ; preds = %9
  %14 = load %struct.window_data*, %struct.window_data** %4, align 8
  %15 = load i32, i32* %7, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.window_data, %struct.window_data* %14, i64 %16
  store %struct.window_data* %17, %struct.window_data** %8, align 8
  %18 = load %struct.window_data*, %struct.window_data** %8, align 8
  %19 = getelementptr inbounds %struct.window_data, %struct.window_data* %18, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = load %struct.window_data*, %struct.window_data** %5, align 8
  %22 = getelementptr inbounds %struct.window_data, %struct.window_data* %21, i32 0, i32 2
  %23 = load i64, i64* %22, align 8
  %24 = add nsw i64 %23, %20
  store i64 %24, i64* %22, align 8
  %25 = load %struct.window_data*, %struct.window_data** %8, align 8
  %26 = getelementptr inbounds %struct.window_data, %struct.window_data* %25, i32 0, i32 1
  %27 = load i64, i64* %26, align 8
  %28 = load %struct.window_data*, %struct.window_data** %5, align 8
  %29 = getelementptr inbounds %struct.window_data, %struct.window_data* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = add nsw i64 %30, %27
  store i64 %31, i64* %29, align 8
  %32 = load %struct.window_data*, %struct.window_data** %8, align 8
  %33 = getelementptr inbounds %struct.window_data, %struct.window_data* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load %struct.window_data*, %struct.window_data** %5, align 8
  %36 = getelementptr inbounds %struct.window_data, %struct.window_data* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = add nsw i64 %37, %34
  store i64 %38, i64* %36, align 8
  br label %39

39:                                               ; preds = %13
  %40 = load i32, i32* %7, align 4
  %41 = add nsw i32 %40, 1
  store i32 %41, i32* %7, align 4
  br label %9

42:                                               ; preds = %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
